--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           npath = require('path')
           tmp = require('tmp')
           execSync = require('child_process').execSync
-    const DEBUG = true
+    const DEBUG = false
           setting_path = "./setting.json"
           i18n = {}
           i18n["here"] = require('./locales/' + window.navigator.language + '.json')
