--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
           files_running[id].process.log[timestamp.toISOString()] = "CONVERT STARTED"
           files_running[id].process.t = 0
           let dest = ""
-          files_running[id].process.outname = `waifued_noise${files_running[id].order.noise_level}_scale${files_running[id].process.scale_ratio}_${files_running[id].file.before.n}`
+          files_running[id].process.outname = `waifued_${files_running[id].order.waifu2x.binarys[files_running[id].order.waifu2x.use].model_use}_${files_running[id].order.model.vendors[files_running[id].order.waifu2x.binarys[files_running[id].order.waifu2x.use].model_use].image_val}_noise${files_running[id].order.noise_level}_scale${files_running[id].process.scale_ratio}_${files_running[id].file.before.n}`
           if(DEBUG) console.log(files_running[id].order.output.path)
           if(files_running[id].order.output.path == ""){
             if(DEBUG) console.log("A")
@@ -571,35 +571,33 @@
             dest = `${files_running[id].order.output.path}${files_running[id].process.outname}.${files_running[id].order.output.file_format}`
           }
           files_running[id].process.dest = dest
+          if(files_running[id].order.noise_level > 0 && files_running[id].order.file_formats[files_running[id].file.file_format].lossy) files_running[id].process.noise = true
+          else if(files_running[id].order.noise_level > 0 && !files_running[id].order.auto_scale) files_running[id].process.noise = true
+          else files_running[id].process.noise = false
           setTimeout(changed_files_list(),500)
+          if(files_running[id].order.scale_down_ratio != 1){
+            timestamp = new Date()
+            command = `magick convert -resize ${files_running[id].order.scale_down_ratio * 100}% -unsharp ${files_running[id].order.scale_down_unsharp} -verbose "${files_running[id].file.path}" "${files_running[id].process.tmpdpnx}" `
+            files_running[id].process.log[timestamp.toISOString()] = execSync(command)
+            if(DEBUG) console.log(command)
+            if(DEBUG) console.log(String.fromCharCode.apply(null, new Uint8Array(files_running[id].process.log[timestamp.toISOString()])))
+          } else {
+            timestamp = new Date()
+            command = `magick convert -verbose "${files_running[id].file.path}" "${files_running[id].process.tmpdpn}.${tmp_ext}"`
+            files_running[id].process.log[timestamp.toISOString()] = execSync(command)
+            if(DEBUG) console.log(command)
+            if(DEBUG) console.log(String.fromCharCode.apply(null, new Uint8Array(files_running[id].process.log[timestamp.toISOString()])))
+          }
+          if(files_running[id].process.noise){
+            timestamp = new Date()
+            command = `${w2xbin}${files_running[id].order.waifu2x.use} -m noise ${files_running[id].order.waifu2x.binarys[files_running[id].order.waifu2x.use].more_option.replace("\n"," ")} --noise_level ${files_running[id].order.noise_level} --model_dir ${w2xbin}models\\${files_running[id].order.waifu2x.binarys[files_running[id].order.waifu2x.use].model_use}\\${files_running[id].order.model.vendors[files_running[id].order.waifu2x.binarys[files_running[id].order.waifu2x.use].model_use].image_val} -i "${files_running[id].process.tmpdpnx}" -o "${files_running[id].process.tmpdpnx}"`
+            files_running[id].process.log[timestamp.toISOString()] = execSync(command)
+            files_running[id].process.t++
+            if(DEBUG) console.log(command)
+            if(DEBUG) console.log(String.fromCharCode.apply(null, new Uint8Array(files_running[id].process.log[timestamp.toISOString()])))
+          }
+          files_running[id].process.noise = false
           do{
-            if(files_running[id].process.t == 0){
-              if(files_running[id].order.scale_down_ratio != 1){
-                timestamp = new Date()
-                command = `magick convert -resize ${files_running[id].order.scale_down_ratio * 100}% -unsharp ${files_running[id].order.scale_down_unsharp} -verbose "${files_running[id].file.path}" "${files_running[id].process.tmpdpnx}" `
-                files_running[id].process.log[timestamp.toISOString()] = execSync(command)
-                if(DEBUG) console.log(command)
-                if(DEBUG) console.log(String.fromCharCode.apply(null, new Uint8Array(files_running[id].process.log[timestamp.toISOString()])))
-            } else {
-                timestamp = new Date()
-                command = `magick convert -verbose "${files_running[id].file.path}" "${files_running[id].process.tmpdpn}.${tmp_ext}"`
-                files_running[id].process.log[timestamp.toISOString()] = execSync(command)
-                if(DEBUG) console.log(command)
-                if(DEBUG) console.log(String.fromCharCode.apply(null, new Uint8Array(files_running[id].process.log[timestamp.toISOString()])))
-              }
-              if(files_running[id].order.noise_level > 0 && files_running[id].order.file_formats[files_running[id].file.file_format].lossy) files_running[id].process.noise = true
-              else if(files_running[id].order.noise_level > 0 && !files_running[id].order.auto_scale) files_running[id].process.noise = true
-              else files_running[id].process.noise = false
-            }
-
-            if(files_running[id].process.noise){
-              timestamp = new Date()
-              command = `${w2xbin}${files_running[id].order.waifu2x.use} -m noise ${files_running[id].order.waifu2x.binarys[files_running[id].order.waifu2x.use].more_option.replace("\n"," ")} --noise_level ${files_running[id].order.noise_level} --model_dir ${w2xbin}models\\${files_running[id].order.waifu2x.binarys[files_running[id].order.waifu2x.use].model_use}\\${files_running[id].order.model.vendors[files_running[id].order.waifu2x.binarys[files_running[id].order.waifu2x.use].model_use].image_val} -i "${files_running[id].process.tmpdpnx}" -o "${files_running[id].process.tmpdpnx}"`
-              files_running[id].process.log[timestamp.toISOString()] = execSync(command)
-              files_running[id].process.t++
-              if(DEBUG) console.log(command)
-              if(DEBUG) console.log(String.fromCharCode.apply(null, new Uint8Array(files_running[id].process.log[timestamp.toISOString()])))
-            }
             if( files_running[id].process.scale_ratio > 1 ){
               timestamp = new Date()
               command = `${w2xbin}${files_running[id].order.waifu2x.use} -m scale ${files_running[id].order.waifu2x.binarys[files_running[id].order.waifu2x.use].more_option.replace("\n"," ")} --scale_ratio 2 --model_dir ${w2xbin}models\\${files_running[id].order.waifu2x.binarys[files_running[id].order.waifu2x.use].model_use}\\${files_running[id].order.model.vendors[files_running[id].order.waifu2x.binarys[files_running[id].order.waifu2x.use].model_use].image_val} -i "${files_running[id].process.tmpdpnx}" -o "${files_running[id].process.tmpdpnx}"`
@@ -608,19 +606,18 @@
               if(DEBUG) console.log(command)
               if(DEBUG) console.log(String.fromCharCode.apply(null, new Uint8Array(files_running[id].process.log[timestamp.toISOString()])))
             }
-
             files_running[id].process.scale_ratio = files_running[id].process.scale_ratio / 2
-            files_running[id].process.noise = false
           } while( files_running[id].process.scale_ratio > 1 )
 
           files_running[id].process.resize_set = ""
-          if(files_running[id].order.scale_auto && files_running[id].process.scale_whichis == "width") files_running[id].process.resize_set = `-resize ${files_running[id].order.scale_ratio.min_width}x -unsharp ${files_running[id].order.scale_down_unsharp} `
-          if(files_running[id].order.scale_auto && files_running[id].process.scale_whichis == "height") files_running[id].process.resize_set = `-resize x${files_running[id].order.scale_ratio.min_height} -unsharp ${files_running[id].order.scale_down_unsharp} `
-          if(!files_running[id].order.scale_auto && files_running[id].process.scale_whichis == "width") files_running[id].process.resize_set = `-resize ${files_running[id].file.image.width * files_running[id].order.scale_ratio.scale_ratio / files_running[id].order.scale_down_ratio}x -unsharp ${files_running[id].order.scale_down_unsharp} `
-          if(!files_running[id].order.scale_auto && files_running[id].process.scale_whichis == "height") files_running[id].process.resize_set = `-resize x${files_running[id].file.image.height * files_running[id].order.scale_ratio.scale_ratio / files_running[id].order.scale_down_ratio} -unsharp ${files_running[id].order.scale_down_unsharp} `
+          if(files_running[id].order.scale_ratio.auto == true && files_running[id].process.scale_whichis == "width") files_running[id].process.resize_set = `-resize ${files_running[id].order.scale_ratio.min_width}x -unsharp ${files_running[id].order.scale_down_unsharp} `
+          else if(files_running[id].order.scale_ratio.auto == true && files_running[id].process.scale_whichis == "height") files_running[id].process.resize_set = `-resize x${files_running[id].order.scale_ratio.min_height} -unsharp ${files_running[id].order.scale_down_unsharp} `
+          else if(files_running[id].order.scale_ratio.auto == false && files_running[id].process.scale_whichis == "width") files_running[id].process.resize_set = `-resize ${files_running[id].file.image.width * files_running[id].order.scale_ratio.scale_ratio}x -unsharp ${files_running[id].order.scale_down_unsharp} `
+          else if(files_running[id].order.scale_ratio.auto == false && files_running[id].process.scale_whichis == "height") files_running[id].process.resize_set = `-resize x${files_running[id].file.image.height * files_running[id].order.scale_ratio.scale_ratio} -unsharp ${files_running[id].order.scale_down_unsharp} `
+          else files_running[id].process.resize_set = `-resize 1200x1200 -unsharp ${files_running[id].order.scale_down_unsharp} `
 
           try{
-            fs.mkdirSync(files_running[id].order.output.path)
+            fs.mkdirSync(files_running[id].process.resize_set)
           }catch(e){}
           timestamp = new Date()
           command = `magick convert ${files_running[id].process.resize_set} ${files_running[id].order.file_formats[files_running[id].order.output.file_format].output_option.replace("\n"," ")} -verbose "${files_running[id].process.tmpdpnx}" "${dest}"`
@@ -745,7 +742,7 @@
           }
           if(DEBUG) console.log("w:"+ ratio_w)
           if(DEBUG) console.log("h:"+ ratio_h)
-          if( ratio_w < ratio_h ) return ratio_h
+          if( ratio_w <= ratio_h ) return ratio_h
           if( ratio_w > ratio_h ) return ratio_w
         } else {
           return files_reserved[id].order.scale_ratio.scale_ratio / files_reserved[id].order.scale_down_ratio
@@ -773,7 +770,7 @@
         }
         if(DEBUG) console.log("w:"+ ratio_w)
         if(DEBUG) console.log("h:"+ ratio_h)
-        if( ratio_w < ratio_h ) return "height"
+        if( ratio_w <= ratio_h ) return "height"
         if( ratio_w > ratio_h ) return "width"
       }
       // id発行
